swagger + refactoring
